--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - 'stable'
+  - 17
 cache:
   directories:
     - node_modules
@@ -8,7 +8,7 @@ env:
   - CI=true
 
 install:
-  - yarn
+  - npm install
 
 script:
   - npm run build
