--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "1.0.0",
   "description": "webcomponents Collection",
   "main": "index.js",
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "start-storybook -p 6006",
-    "build": "build-storybook -o dist"
+    "build": "build-storybook -o dist",
+    "lint": "eslint ./stories",
+    "prepare": "husky install",
+    "prettier": "prettier --write ."
   },
   "repository": {
     "type": "git",
@@ -35,6 +41,11 @@
     "@storybook/manager-webpack4": "^6.5.9",
     "@storybook/mdx2-csf": "^0.0.3",
     "@storybook/testing-library": "^0.0.13",
-    "babel-loader": "^8.2.5"
+    "babel-loader": "^8.2.5",
+    "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.5.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "prettier": "2.7.1"
   }
 }
