--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@storybook/manager-webpack4": "^6.5.9",
     "@storybook/mdx2-csf": "^0.0.3",
     "@storybook/testing-library": "^0.0.13",
+    "@storybook/theming": "^6.5.9",
     "babel-loader": "^8.2.5",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
